tests/subtyping/type-cast/ill-typed/type-cast-2.stella
language core;
extend with #type-cast;

fn main(a : Nat) -> Nat {
  return succ(false) cast as Nat
}
